# TacticToolkit

./: .gitignore  LICENSE  README.md  TacticToolkit.sln  numpy.py  pyproject.toml  tokenomics.py
csharp/TacticToolkit.CSharp/: TacticToolkit.CSharp.csproj  packages.config
csharp/TacticToolkit.CSharp/Crawlers/: CrawlerBase.cs  CrawlerFactory.cs  ICrawler.cs
csharp/TacticToolkit.CSharp/Data/: DataRepositoryBase.cs  DataUtilityBase.cs  IDataRepository.cs  IDataUtility.cs  PagedLoadResult.cs  RepositoryBase.cs
csharp/TacticToolkit.UnitTests/: TacticToolkit.UnitTests.csproj  packages.config
examples/: 2016-09-16_RNN_With_word_vecs.ipynb  2017-09-08_spaCy_learning.ipynb  2017-09-11_TacticToolkit_Intro.ipynb  2017-09-11_TacticToolkit_sandbox.ipynb  2017-09-12_MeijaCorpus_Heatmap.ipynb  2017-09-16_CleanRNN_Attempt.ipynb  2017-09-16_MeijaWithGensim.ipynb  2017-09-17_KerasRNN_Clean.ipynb  2017-12-08_WangTileScraper.ipynb  2017-12-09_TileWebScraping.ipynb  2017-12-14_Multiscrapers.ipynb  2017-12-14_ScraperTridux.ipynb
examples/_ref/: 2017-09-05_Notes.ipynb  2017-09-95_Notes.ipynb
src/ttk/data/: __init__.py  (+1 more)
ttk/: __init__.py  ttk.pyproj
ttk/corpus/: CategorizedDatedCorpusReader.py  CategorizedDatedCorpusReporter.py  __init__.py
ttk/plotting/: CategorizedDatedCorpusPlotter.py  __init__.py
ttk/preprocessing/: Seq2IndexTransformer.py  Seq2IndexTransformerTests.py  Seq2WordVecTransformer.py  Seq2WordVecTransformerTests.py  SeqPaddingTransformer.py  SeqPaddingTransformerTests.py  __init__.py  sequence.py  test_sequence.py
ttk/text/: Normalizer.py  __init__.py
(+15 files in other folders)
